[INI] Comment googleapi.ini and googleanalytics.ini

--- a/settings/googleanalytics.ini
+++ b/settings/googleanalytics.ini
@@ -12,8 +12,8 @@
 
 [GoogleAnalyticsSettings]
 
-ApplicationName=Google Analytics Application
+; ApplicationName=Google Analytics Application
 
-ProfilIDs[]
+; ProfilIDs[]
 # in seconds, 1 requests/second/user
-PerUserLimit=1
+; PerUserLimit=1
