--- a/settings/googleapi.ini
+++ b/settings/googleapi.ini
@@ -11,14 +11,14 @@
 
 [GoogleAPISettings]
 
-OAuthServiceClientID=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-OAuthServiceEmailAddress=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-OAuthServiceClientSecret=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-OAuthServiceP12Location=xxxxxxxxxxxxxxxxxxxxxxx
+; OAuthServiceClientID=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+; OAuthServiceEmailAddress=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+; OAuthServiceClientSecret=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+; OAuthServiceP12Location=xxxxxxxxxxxxxxxxxxxxxxx
 
-OAuthBrowserClientID=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-OAuthBrowserEmailAddress=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-OAuthBrowserClientSecret=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-OAuthBrowserRedirectUrl=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+; OAuthBrowserClientID=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+; OAuthBrowserEmailAddress=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+; OAuthBrowserClientSecret=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+; OAuthBrowserRedirectUrl=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
-PublicApiKey=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+; PublicApiKey=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
