--- a/composer.json
+++ b/composer.json
@@ -30,5 +30,8 @@
         "branch-alias": {
             "dev-master": "2.x-dev"
         }
+    },
+    "config" : {
+        "vendor-dir" : "lib"
     }
 }
